--- a/trello_join.html
+++ b/trello_join.html
@@ -192,7 +192,7 @@
 				
                 var ActionInfo = {
                     id: "Trello_Cards_Actions",
-                    alias: "Trello_Actions",
+                    alias: "Trello_Cards_Actions",
                     columns: actionCols
                 };
 				var tableInfo = {
