--- a/trello_join.html
+++ b/trello_join.html
@@ -124,8 +124,8 @@
                     alias: "Action",
                     dataType: tableau.dataTypeEnum.string
                 }, {
-                    id: "DateChange",
-                    alias: "DateChange",
+                    id: "Date",
+                    alias: "Date",
                     dataType: tableau.dataTypeEnum.datetime
                 }, {
                     id: "ListBefore",
@@ -217,7 +217,7 @@
                         'list_fields=name&' +
                         'cards=all&' +
                         'members=all&' +
-                        'card_fields=all&actions=updateCard:idList';//,closed';&actions?filter=updateCard:idList
+                        'card_fields=all&actions=createCard,updateCard:idList';//,closed';&actions?filter=updateCard:idList
                 //https://api.trello.com/1/boards/PalPvyUd/?key=688c3a5077d79b8fc3cbfff7e5002e1d&token=f0fd2f6e828eff1bd22352f42cd2f9c6d9c3596db515e6051aba4108ea676e03&lists=open&list_fields=name&cards=open&members=all&card_fields=name,desc,labels,idMembers,idList,id
             };
 
@@ -288,7 +288,7 @@
 											'Id': actions[ii].data.card.id,
 											//'List': cardList,
 											'Action': action,
-											'DateChange': actions[ii].date,
+											'Date': actions[ii].date,
 											'ListBefore': prevList,
 											'ListAfter': nextList,
 											'RowNum': ii
