--- a/trello_join.html
+++ b/trello_join.html
@@ -416,7 +416,7 @@
 											'dueComplete': complete,
 											'closed': cards[ii].closed,
 											'dateLastActivity': lastAct,
-											'Description': cards[ii].desc
+											'Description': descr
 
 										};
 										dataToReturn.push(entry);
